Updated Work, Changed images

--- a/index.html
+++ b/index.html
@@ -213,9 +213,14 @@
                                 <br/>
                                 Hi, I'm Caitlyn Michele Ya Kodric! 
                                 <br/>
+                                <br/>
+                                Designer. Green Thumb. Potter. Painter. 
+                                <br/>
+                                <br/>
                                 I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
                                 I have a passion for arts and would love the opportunity to work in design. 
                                 <br />
+                                <br/>
                                 Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a>.</a>
                     
                             </p>
@@ -313,7 +318,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Spotify/Artist Frame.jpg');"></div>
+                            <div style="background-image: url('assets/img/SpotifyTile.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -328,7 +333,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/BreakInequality/HomePage.png');"></div>
+                            <div style="background-image: url('assets/img/MaerJonoTile.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -402,17 +407,102 @@
 
             </div>
             </div>
-            <div class="nk-gap-4 mt-15"></div>
 
             <!-- START: Pagination -->
             <div class="nk-pagination nk-pagination-center">
                 <a href="portfolio.html">Load More</a>
             </div>
             <!-- END: Pagination -->
-
-             <div class="nk-gap-4 mt-15"></div>
         </div>
         <!-- END: Portfolio -->
+
+      <!-- START: Jobs -->
+      <div class="nk-box bg-white" id="jobs">
+        <div class="nk-gap-4 mt-5"></div>
+
+        <h2 class="text-xs-center display-4">Places I've Worked</h2>
+        <!-- <p class="text-xs-center">
+            Individul projects pictures coming soon ... 
+        </p> -->
+        <div class="nk-gap mnt-6"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="text-xs-center">
+                        Checkout my <a href="assets/pdf/Resume Caitlyn Kodric.pdf">resume</a>!
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="nk-gap-2 mt-12"></div>
+        <div class="container">
+        <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols">
+
+            <div class="nk-isotope-item">
+                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item-image">
+                        <div style="background-image: url('assets/img/Jobs/tdlab.png');"></div>
+                    </div>
+                    <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                        <div>
+                            <h2 class="portfolio-item-title h3">TD Lab</h2>
+                            <div class="portfolio-item-category">UI/UX Designer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="nk-isotope-item">
+                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item-image">
+                        <div style="background-image: url('assets/img/Jobs/ifds.png');"></div>
+                    </div>
+                    <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                        <div>
+                            <h2 class="portfolio-item-title h3">IFDS</h2>
+                            <div class="portfolio-item-category">Backend Developer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="nk-isotope-item">
+                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item-image">
+                        <div style="background-image: url('assets/img/Jobs/majik.png');"></div>
+                    </div>
+                    <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                        <div>
+                            <h2 class="portfolio-item-title h3">MAJiK Systems</h2>
+                            <div class="portfolio-item-category">Frontend Devloper</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="nk-isotope-item">
+                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item-image">
+                        <div style="background-image: url('assets/img/Jobs/veriday.png');"></div>
+                    </div>
+                    <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                        <div>
+                            <h2 class="portfolio-item-title h3">Veriday</h2>
+                            <div class="portfolio-item-category">UI Developer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        </div>
+
+        <div class="nk-gap-4 mt-15"></div>
+    </div>
+    <!-- END: Jobs -->
+
 
         <!-- START: Reviews -->
         <!-- <div class="nk-box bg-dark-1">
