--- a/spotifyredesign.html
+++ b/spotifyredesign.html
@@ -180,25 +180,13 @@
                                     <img src="assets/img/Spotify/Jane.jpg" style="width:350px"/>
                                     <img src="assets/img/Spotify/Sukh.jpg" style="width:350px"/>
                                     <img src="assets/img/Spotify/Joan.jpg" style="width:350px"/>
-                                </p>
-                                <h3 class="nk-portfolio-title">Podcasts</h3>
-                                <p>
-                                    I love Podcasts ... 
-                                </p>
-                                <p>
-                                    <img src="assets/img/Spotify/Browse Podcasts.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Featured Podcasts.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Featured Episodes.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Browse Podcasts.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Indv Podcast Expand.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/My Podcasts.jpg" style="width:350px">
-                                </p>            
+                                </p>          
                                 <h3 class="nk-portfolio-title">Artists</h3>
                                 <p>
                                     I love Podcasts ... 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Artist Frame.jpg" style="width:350px">
+                                    <img src="assets/img/Spotify/Artist.jpg" style="width:1000px">
                                     
                                 </p> 
                                 <h3 class="nk-portfolio-title">Profile</h3>
@@ -206,35 +194,45 @@
                                     I love Podcasts ... 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Indv Podcast.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Indv Podcast.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Indv Podcast Expand.jpg" style="width:350px">
+                                    <img src="assets/img/Spotify/Profile.jpg" style="width:1000px">
                                 </p> 
                                 <h3 class="nk-portfolio-title">Playlists</h3>
                                 <p>
                                     I love Podcasts ... 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Playlist.jpg" style="width:350px">
+                                    <img src="assets/img/Spotify/Playlist.jpg" style="width:1000px">
                                 </p>
                                 <h3 class="nk-portfolio-title">Mini Players</h3>
                                 <p>
                                     I love Podcasts ... 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/collapsed wide.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/half-size.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/openwide.jpg" style="width:350px">
+                                    <img src="assets/img/Spotify/MiniPlayer.jpg" style="width:1000px">
                                 </p>
-                                <h3 class="nk-portfolio-title">Additional Pages</h3>
+                                <h3 class="nk-portfolio-title">Radio</h3>
                                 <p>
                                     I love Podcasts ... 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Categories.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Curated.jpg" style="width:350px">
-                                    <img src="assets/img/Spotify/Radio.jpg" style="width:350px">
+                                    <img src="assets/img/Spotify/Radio.jpg" style="width:1000px">
                                 </p>
+                                <h3 class="nk-portfolio-title">For You!</h3>
+                                <p>
+                                    I love Podcasts ... 
+                                </p>
+                                <p>
+                                    <img src="assets/img/Spotify/ForYou.jpg" style="width:1000px">
+
+                                </p>
+                                <h3 class="nk-portfolio-title">Podcasts</h3>
+                                <p>
+                                    I love Podcasts ... 
+                                </p>
+                                <p>
+                                    <img src="assets/img/Spotify/Podcasts.jpg" style="width:1000px">
+
+                                </p>  
                             </div>
                         </div>
                     </div>
@@ -286,7 +284,7 @@
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="maer-jono.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="pottery2.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
