--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                         <div class="nk-gap-4 mt-9"></div>
 
                         <h2 class="display-4">About Me</h2>
+                        <div class="nk-gap mnt-6"></div>
                         <div class="col-lg-12">
                             <img src="assets/img/headshot.png" alt="Avatar" style="width:30%; border-radius:100%">
                         </div>
