Added content to Spofity

--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
             </div>
             <ul class="nk-isotope-filter">
                 <li class="active" data-filter="*">All</li>
-                <li data-filter="Design">Design</li>
+                <li data-filter="Product">Product</li>
                 <li data-filter="ArtWork">Art Work</li>
                 <li data-filter="CAD">CAD</li>
                 <li data-filter="Circuits">Circuits</li>
@@ -179,7 +179,7 @@
 
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
-                <div class="nk-isotope-item" data-filter="Design">
+                <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -225,7 +225,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Design">
+                <div class="nk-isotope-item" data-filter="Product">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -241,7 +241,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Design">
+                <div class="nk-isotope-item" data-filter="Product">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="war-of-the-web.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
