--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
     <meta name="author" content="nK">
 
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <!-- <link rel="icon" type="image/png" href="assets/images/favicon.png"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -169,7 +169,7 @@
                 <li data-filter="Product">Product</li>
                 <li data-filter="ArtWork">Art Work</li>
                 <li data-filter="CAD">CAD</li>
-                <li data-filter="Circuits">Circuits</li>
+                <!-- <li data-filter="Circuits">Circuits</li> -->
                 <li data-filter="Mockup">Mockup</li>
                 <li data-filter="Pottery">Pottery</li>
             </ul>
@@ -273,7 +273,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Mockup">
+                <!-- <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="snaptrax.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
@@ -305,7 +305,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Circuits">
+                <!-- <div class="nk-isotope-item" data-filter="Circuits">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -318,7 +318,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
@@ -337,7 +337,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="malibu-sunset.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -350,7 +350,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="nk-isotope-item" data-filter="Pottery">
@@ -384,7 +384,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="rustic-daisy.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -397,10 +397,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="moonlight-forest.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -413,7 +413,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
@@ -430,7 +430,7 @@
                     </div>
                 </div> -->
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                         <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                             <a href="dandelion.html" class="nk-portfolio-item-link"></a>
                             <div class="nk-portfolio-item-image">
@@ -443,7 +443,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
             </div>
 
