--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 I have a passion for arts and would love the opportunity to work in design. 
                                 <br />
                                 <br/>
-                                Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a>.</a>
+                                Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">c.kodric@gmail.com</a>.</a>
                     
                             </p>
                         </div>
@@ -442,6 +442,22 @@
 
             <div class="nk-isotope-item">
                 <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <a href="hp.html" class="nk-portfolio-item-link"></a>
+                    <div class="nk-portfolio-item-image">
+                        <div style="background-image: url('assets/img/Jobs/hplogo.png');"></div>
+                    </div>
+                    <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                        <div>
+                            <h2 class="portfolio-item-title h3">Healthy Pets</h2>
+                            <div class="portfolio-item-category">Product Manager, Design, Development</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="nk-isotope-item">
+                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <a href="td.html" class="nk-portfolio-item-link"></a>
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/tdlab.png');"></div>
                     </div>
