--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
             <div class="nk-isotope-item">
                 <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                    <a href="hp.html" class="nk-portfolio-item-link"></a>
+                    <!-- <a href="hp.html" class="nk-portfolio-item-link"></a> -->
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/hplogo.png');"></div>
                     </div>
@@ -457,7 +457,7 @@
 
             <div class="nk-isotope-item">
                 <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                    <a href="td.html" class="nk-portfolio-item-link"></a>
+                    <!-- <a href="td.html" class="nk-portfolio-item-link"></a> -->
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/tdlab.png');"></div>
                     </div>
