jubatap, td, healthypets info

--- a/creditcards.html
+++ b/creditcards.html
@@ -162,15 +162,18 @@
             <div class="nk-portfolio-single">
 
                 <div class="nk-gap-4 mb-14"></div>
-                <h1 class="nk-portfolio-title display-4">Healthy Pets</h1>
+                <h1 class="nk-portfolio-title display-4">TD Lab</h1>
                 <div class="row vertical-gap">
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
                                 <h3 class="nk-portfolio-title">Background</h3>
                                 <p>
-                                    Healthy Pets is my current co-op! Continually reskinning the Healthy Pets website to make it the best experience possible.
-                                    Check it out <a href="https://healthypets.io" target="_blank">here</a>!
+                                    The TD Lab is located in the Communitech buildings. Due to the research and development phases at the lab the work done at TD is closed by NDA.
+                                </p>
+                                <h3 class="nk-portfolio-title">Hackathon</h3>
+                                <p>
+                                    During the middle of the co-op term we participated in a Hackathon that was proposed by corporate TD. The invision board below was our protoype example.
                                 </p>
                             </div>
                         </div>
@@ -187,13 +190,13 @@
                                 <td>
                                     <strong>Date:</strong>
                                 </td>
-                                <td>Fall 2018</td>
+                                <td>Winter 2018</td>
                             </tr>
                             <tr>
                                 <td>
                                     <strong>Tools:</strong>
                                 </td>
-                                <td>Figma, Invision</td>
+                                <td>Sketch, Invision, Marvel, iMovie</td>
                             </tr>
                             <!-- <tr>
                                 <td>
@@ -209,8 +212,11 @@
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
-                <img width="50%" src="assets/img/Healthypets/applogo.png">
-                <img width="50%" src="assets/img/Healthypets/wireframe.png">
+                <img width="33%" src="assets/img/Creditcards/cc1.png">
+                <img width="33%" src="assets/img/Creditcards/cc2.png">
+                <img width="33%" src="assets/img/Creditcards/cc3.png">
+                <img width="33%" src="assets/img/Creditcards/hackathon1.png">
+                <img width="33%" src="assets/img/Creditcards/hackathon2.png">
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
