--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </div>
                 </div>
 
-                <div class="nk-isotope-item" data-filter="Mockup">
+                <!-- <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -343,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
