--- a/jubatap.html
+++ b/jubatap.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img assets.src="assets/img/Initials.png" alt="" width="100" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Initials.png" alt="" width="100" class="nk-nav-logo-onscroll">
                         <img src="assets/img/Initials.png" alt="" width="125">
                     </a>
 
@@ -112,7 +112,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <!--<img src="assets/img/Name - WH.svg" alt="" width="85">-->
+                                <img src="assets/img/Initials.png" alt="" width="85">
                             </a>
                         </div>
 
@@ -162,15 +162,60 @@
             <div class="nk-portfolio-single">
 
                 <div class="nk-gap-4 mb-14"></div>
-                <h1 class="nk-portfolio-title display-4">Healthy Pets</h1>
+                <h1 class="nk-portfolio-title display-4">JubaTap</h1>
                 <div class="row vertical-gap">
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <h3 class="nk-portfolio-title">Background</h3>
+                                <h3 class="nk-portfolio-title">Introduction</h3>
                                 <p>
-                                    Healthy Pets is my current co-op! Continually reskinning the Healthy Pets website to make it the best experience possible.
-                                    Check it out <a href="https://healthypets.io" target="_blank">here</a>!
+                                    <!-- Test -->
+                                </p>
+                                <h3 class="nk-portfolio-title">Users</h3>
+                                <p>
+                                    <!-- testing -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/users.png" style="width:90%"/>
+                                </p> 
+                                <h3 class="nk-portfolio-title">Design Sprint</h3>
+                                <p>
+                                    <!-- test -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/sprint.png" style="width:30%">
+                                    <img src="assets/img/JubaTap/sprint2.png" style="width:30%">
+                                    <img src="assets/img/JubaTap/sprint3.png" style="width:30%">
+                                </p>    
+                                <h3 class="nk-portfolio-title">User Testing</h3>
+                                <p>
+                                    <!-- test -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/usertesting.png" style="width:90%">
+                                </p>      
+                                <h3 class="nk-portfolio-title">LFP</h3>
+                                <p>
+                                    <!-- test -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/LFP.png" style="width:50%">
+                                    <img src="assets/img/JubaTap/LFP2.png" style="width:50%">
+                                </p> 
+                                <h3 class="nk-portfolio-title">MFP</h3>
+                                <p>
+                                    <!-- test -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/MFP.png" style="width:90%">
+                                </p>
+                                <h3 class="nk-portfolio-title">HFP</h3>
+                                <p>
+                                    <!-- test -->
+                                </p>
+                                <p>
+                                    <img src="assets/img/JubaTap/HFP.png" style="width:50%">
+                                    <img src="assets/img/JubaTap/HFP2.png" style="width:50%">
                                 </p>
                             </div>
                         </div>
@@ -181,19 +226,19 @@
                                 <td>
                                     <strong>Project:</strong>
                                 </td>
-                                <td>Design | Mock ups</td>
+                                <td>Digital Tap Shoe</td>
                             </tr>
                             <tr>
                                 <td>
                                     <strong>Date:</strong>
                                 </td>
-                                <td>Fall 2018</td>
+                                <td>Spring 2018</td>
                             </tr>
                             <tr>
                                 <td>
                                     <strong>Tools:</strong>
                                 </td>
-                                <td>Figma, Invision</td>
+                                <td>Sketch, Ableton, Circuits</td>
                             </tr>
                             <!-- <tr>
                                 <td>
@@ -209,9 +254,6 @@
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
-                <img width="50%" src="assets/img/Healthypets/applogo.png">
-                <img width="50%" src="assets/img/Healthypets/wireframe.png">
-                <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
@@ -221,12 +263,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="maer-jono.html">
-                    <span class="pe-7s-angle-left"></span> Previous Work</a>
+                <!-- <a class="nk-pagination-prev" href="portfolio.html">
+                    <span class="pe-7s-angle-left"></span> Previous Work</a> -->
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="war-of-the-web.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="pottery2.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
