--- a/spotifyredesign.html
+++ b/spotifyredesign.html
@@ -210,7 +210,7 @@
                                     Some of my favourites: Feist, The Hip, The Weeknd, Bon Iver, and so many more! 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Artist.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/Artist.jpg" style="width:90%">
                                     
                                 </p> 
                                 <h3 class="nk-portfolio-title">Profile</h3>
@@ -218,7 +218,7 @@
                                     This page was based mainly on Frank. The featured playlists are dynamic so the user is allowed to showcase what people view when someone visits their page. The ability to view all playlists outside of the side navigation bar was also added. It gives the users ability to view their public and private playlists together.  
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Profile.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/Profile.jpg" style="width:90%">
                                 </p> 
                                 <h3 class="nk-portfolio-title">Playlists</h3>
                                 <p>
@@ -228,28 +228,28 @@
                                     Some of my favourites: Spotify’s Fresh Finds, Totally Alt, and playlists that artists create. 
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Playlist.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/Playlist.jpg" style="width:90%">
                                 </p>
                                 <h3 class="nk-portfolio-title">Mini Players</h3>
                                 <p>
                                     There’s a little button in the bottom right of the app to expand your page, I bet you didn’t know that. I sure didn’t until I started exploring. When clicked it turns into a full screen of your album. But wouldn’t it be cool to view it in a small corner of your screen, easy to change songs, and easy to keep hidden.  
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/MiniPlayer.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/MiniPlayer.jpg" style="width:90%">
                                 </p>
                                 <h3 class="nk-portfolio-title">Radio</h3>
                                 <p>
                                     What I first saw when I clicked Radio were the recently played, but I never played anything. After scrolling down I saw the genre tags and had no idea what they did. I wanted to showcase the genres to look more like radio playlists so you know that clicking on one takes you to that radio.  
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Radio.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/Radio.jpg" style="width:90%">
                                 </p>
                                 <h3 class="nk-portfolio-title">For You!</h3>
                                 <p>
                                     I love what Spotify did with curated playlists, I listen to my Discover Weekly and Release Radar every week to hear what they have made for me. The current tab is only the daily mixes which made it difficult for users to find the other two. I wanted to change them to a curated for you page to encourage easy finding since they encourage users to branch out musically.
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/ForYou.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/ForYou.jpg" style="width:90%">
 
                                 </p>
                                 <h3 class="nk-portfolio-title">Podcasts</h3>
@@ -260,7 +260,7 @@
                                     Some of my favourites: Criminal, Popcorn, Rolling Stone: Music Now, and UI Breakfast
                                 </p>
                                 <p>
-                                    <img src="assets/img/Spotify/Podcasts.jpg" style="width:1000px">
+                                    <img src="assets/img/Spotify/Podcasts.jpg" style="width:90%">
 
                                 </p>  
                             </div>
