--- a/portfolio.html
+++ b/portfolio.html
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                
+<!--                 
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="nk-isotope-item" data-filter="Product">
